# python-unidiff

./: .gitignore  .travis.yml  AUTHORS  HISTORY  MANIFEST.in  README.md  README.rst  pyproject.toml  run_tests.sh  setup.py
.github/workflows/: ci.yml  codeql.yml  main.yml
tests/: __init__.py  test_hunks.py  test_line.py  test_parser.py  test_patchedfile.py
tests/samples/: binary.diff  bzr.diff  debdiff.diff  git.diff  git_cr.diff  git_delete.diff  git_filenames_with_spaces.diff  git_filenames_with_spaces_prefix.diff  git_no_prefix.diff  git_quoted_filename.diff  git_quoted_filename_with_spaces.diff  git_rename.diff  git_symlink.diff  hg.diff  sample0.diff  sample1.diff  sample2.diff  sample3.diff  sample4.diff  sample5.diff  sample6.diff  sample7.diff  sample8.diff  svn.diff
unidiff/: __init__.py  __main__.py  __version__.py  constants.py  errors.py  parser.py  patch.py  utils.py
unidiff/tests/: __init__.py  sample.diff  sample_bad.diff  test_hunks.py  test_parser.py  test_patchedfile.py
